# template-python-uv-package

./: .gitignore  NOTES.md  README.md  TEMPLATE.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: release.yml
src/template_python_uv_package/: __init__.py
